backend-server/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-genome-browser-server-svc
  labels:
    app: new-genome-browser-server-svc
spec:
  selector:
    app: new-genome-browser-server

  type: ClusterIP
  ports:
    - name: genome-browser
      port: 8000
      protocol: TCP
      targetPort: 3333
