backend-server/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genome-browser-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: newgb.review.ensembl.org
    http:
      paths:
      - backend:
          service: 
            name: genome-browser-server-svc
            port:
              number: 8000
        path: /api/data
        pathType: Prefix
